[package]
name = "dynamo-proto"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-wkt = "0.7"
prost-wkt-types = "0.7"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
prost-wkt-build = "0.7"
